# fog_reduction

./: CMakeLists.txt  package.xml
include/fog_reduction/: fog_reduction_core.hpp
launch/: fog_reduction.launch.xml
src/: fog_reduction_core.cpp  fog_reduction_node.cpp
