<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fog_reduction</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shimo@todo.todo">shimo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_perception_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>velodyne_pointcloud</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
